Fix bug when Feedly image has a bigger height than the tile (overflowing)

--- a/app/presentation/components/main-view/entertainments/tiles/FeedlyTile.scss
+++ b/app/presentation/components/main-view/entertainments/tiles/FeedlyTile.scss
@@ -12,7 +12,19 @@
   }
 
   .thumbnail {
-    max-width:100%;
-    height:auto;
+    max-width: 100%;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .thumbnailcontainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
 }
